tests/NormalTests/paczka1/fuzzy1/39918671.err
Error in line 5: fN8dHG A631 66,1
Error in line 20: gRSQuvn A916 25,3
Error in line 29: XVpF9bbK3 A631 15,3
Error in line 31: XVpF9bbK3 A916 69,5
Error in line 35: A631 A631 81,8
